src/objects/UserConfig__c.object
<CustomObject>
    <fields>
        <fullName>ConfigInfo__c</fullName>
        <label>カスタマイズ情報</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FunctionSubType__c</fullName>
        <label>機能タイプサブ</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FunctionType__c</fullName>
        <label>機能タイプ</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>KREP</fullName>
                </value>
                <value>
                    <fullName>ROOM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ShopCode__c</fullName>
        <label>店舗コード</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ユーザ</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CustomeDefUserRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>UserConfig</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>UC-{0000000000}</displayFormat>
        <label>番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>